<resources>
    <string name="app_name">iWaiter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="signin">Sign in</string>
    <string name="login_instruction">Enter your phone number</string>
    <string name="login_instruction_enter_code">Enter the code send to your phone</string>
    <string name="error_wrong_code">Wrong code!</string>
    <string name="resend">Resend code</string>
    <string name="login_fail">Fail to login. There some errors</string>
    <string name="error_invalid_phone">Phone number format is invalid!</string>
    <string name="danh_muc">Categories</string>
    <string name="RestaurantsRef">restaurants</string>
    <string name="Menu">Menu</string>
    <string name="CategoriesRef">category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result_text_default">scan qr code</string>
    <string name="your_cart">Your cart</string>
    <string name="scan_qrcode_table">Scan QR code on the table</string>
    <string name="delete">delete</string>
    <string name="generate">GENERATE</string>
    <string name="qr_code_generator">QR Code Generator</string>
    <string name="enter_text_to_generate">Enter Text to generate</string>
</resources>
