<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context="vn.thientf.iwaiter.QRGenActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qr_code_generator"
        android:textSize="10pt"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/enter_text_to_generate"
        android:id="@+id/textQR"
        android:textSize="10pt"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_centerHorizontal="true"
        android:text="@string/generate"
        android:textSize="10pt"
        android:textStyle="bold"
        android:id="@+id/genQR_btn"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="160dp"
        android:background="@android:color/black"
        android:id="@+id/viewQR"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_below="@+id/viewQR">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageQR"/>
    </LinearLayout>
</RelativeLayout>
