<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="#fff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <TextView
            android:id="@+id/tvGuide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_instruction"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@color/second_color"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="20">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtPhone"
                android:layout_weight="18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Phone number"
                android:textColorHint="@color/second_color"
                android:text="01253381812"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="34sp"
                android:inputType="phone"
                app:met_baseColor="#000"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="14"
                app:met_primaryColor="#371161"
                app:met_singleLineEllipsis="true"
                />
            <ProgressBar
                android:id="@+id/progressBarPhone"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="-20dp"
                android:visibility="invisible"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="20">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your verify code:"
                android:textColorHint="@color/second_color"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="34sp"
                android:inputType="number"
                app:met_baseColor="#000"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="6"
                app:met_primaryColor="#371161"
                app:met_singleLineEllipsis="true"
                android:visibility="invisible"
                />
            <ProgressBar
                android:id="@+id/progressBarCode"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="-20dp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tvError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_wrong_code"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnResend"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/resend"
        android:textColor="#fff"
        android:background="@color/second_color"
        />
    <Button
        android:id="@+id/btnSignIn"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/signin"
        android:textColor="#fff"
        android:background="@color/second_color"
        />

</RelativeLayout>
